[package]
name = "opus"
version = "0.3.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Safe Rust bindings for libopus"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = ["opus", "codec", "voice", "sound", "audio"]
categories = ["api-bindings", "encoding", "compression",
	"multimedia::audio", "multimedia::encoding"]

repository = "https://github.com/SpaceManiac/opus-rs"
documentation = "https://docs.rs/opus/0.3.0/opus"

[dependencies]
audiopus_sys = { git = "https://github.com/MarcTreySonos/audiopus_sys/", rev = "a73a17495790c1837573db0eae1aa7331dc59f65" }
